--- a/INTRODUCAO/index.html
+++ b/INTRODUCAO/index.html
@@ -9,6 +9,7 @@
 <body>
     <div id="app">
         {{msg}}
+        <p>teste</p>
 
         <p v-bind:title="titulo">Teste com TITLE</p>
         <p v-if="condicao">Testando Condições</p>
