ATUALIZAÇÃO DE ROTEIRO

--- a/COMPONENTES/index.html
+++ b/COMPONENTES/index.html
@@ -45,7 +45,7 @@
                 meuTitulo:"Este é meu novo titulo", 
                 registros:[
                     {titulo:'Titulo 1', descricao:'Cyberschool', link:"tecinova.net"},
-                    {titulo:'Titulo 2', descricao:'Cyberschool 2', link:"tecinova.net"},
+                    {titulo:'Titulo 2', descricao:'Cyberschool 2', link:"tecinova.net 1"},
                     {titulo:'Titulo 3', descricao:'Cyberschool 3', link:"tecinova.net"},
                     {titulo:'Titulo 4', descricao:'Cyberschool 4', link:"tecinova.net"}
                 ]
