--- a/COMPONENTES/index.html
+++ b/COMPONENTES/index.html
@@ -30,7 +30,34 @@
         <p>{{23.983475235 | TrataValor}} </p> <!---
             criado o filters e a função com a logica de tratamento, é só adicionar o valor, paipe "|" e chamar o nosso filter Tratavalor
         --->
+        <!---
+            COMPUTED X METHOD
+            Vamos agora ver os métodos trabalhados, que são semelhanes ao metodos que já estudamos anteriormente.
+            bom vamos utiliza-los atravéz de  uma lista e vamos reutilizar os dados que já criamos
+            também adicionamos outro dado, o valor, onde ao chamarmos no li, vamos usar o filter tratavalor para trata-lo.
 
+            feito isso vamos somar estes valores, primeiramente criamos um method com nome de totalValorMetodo: function(){}.
+        -->
+        <ul>
+            <li v-for="registro in registros">{{registro.titulo}} - {{registro.descricao}} - {{registro.link}} - {{registro.valor | TrataValor}}</li>
+        </ul>
+        <!--
+            Aqui utilizamos o methods,     
+        --->
+        <p>Total (methods:) {{totalValorMetodo() | TrataValor}}</p>
+        <!--
+            Aqui utilizamos o Computed,     
+            adicionamos o computed no nosso app, feito o computado 
+            eu chamo aqui, no qual ele não precisa de parenteses como o methods
+        --->
+        <p>Total (computed:) {{totalValorComputado | TrataValor}}</p>
+        <!---
+            Agora vou criar duas variaveis para testarmos a ação e percebermos as diferenças entre estes dois métodos, assim poderemos ver quantas vezes estes metodos são chamados na inicialização, vamos lá.
+
+            o methods execulta 102 vezes, enquanto o computed execulta apenas 1, logo para se trabalhar com listas o computed é a melhor opção.
+        --->
+        <p>contaMethods: Execultou: {{contaMethods}}</p>
+        <p>contaComputed: Execultou: {{contaComputed}}</p>
        
 
     </div>
@@ -63,16 +90,38 @@
             data:{
                 meuTitulo:"Este é meu novo titulo", 
                 registros:[
-                    {titulo:'Titulo 1', descricao:'Cyberschool', link:"tecinova.net"},
-                    {titulo:'Titulo 2', descricao:'Cyberschool 2', link:"tecinova.net 1"},
-                    {titulo:'Titulo 3', descricao:'Cyberschool 3', link:"tecinova.net"},
-                    {titulo:'Titulo 4', descricao:'Cyberschool 4', link:"tecinova.net"}
+                    {titulo:'Titulo 1', descricao:'Cyberschool', link:"tecinova.net", valor:2.25},
+                    {titulo:'Titulo 2', descricao:'Cyberschool 2', link:"tecinova.net 1", valor: 2.35},
+                    {titulo:'Titulo 3', descricao:'Cyberschool 3', link:"tecinova.net", valor: 3.45},
+                    {titulo:'Titulo 4', descricao:'Cyberschool 4', link:"tecinova.net", valor: 5.50}
                 ],
-                html: '<a href="#">Link via VueJS</a>'
+                html: '<a href="#">Link via VueJS</a>', 
+                contaMethods: 0,
+                contaComputed: 0
             }, 
             filters:{
                 TrataValor: function(valor) {
                     return ('R$: '+(valor).toFixed(2)).replace('.',',');
+                }
+            },
+            methods:{
+                totalValorMetodo: function(){
+                    this.contaMethods++;
+                    var total = 0;
+                    for(item of this.registros){
+                        total += item.valor;
+                    }
+                    return total;
+                }
+            }, 
+            computed:{
+                totalValorComputado: function(){
+                    this.contaComputed++;
+                    var total = 0;
+                    for(item of this.registros){
+                        total += item.valor;
+                    }
+                    return total;
                 }
             }
         });
